fix submit review button spacing

--- a/src/sass/components/_org-cards.scss
+++ b/src/sass/components/_org-cards.scss
@@ -13,6 +13,9 @@
     padding-left: 0;
     padding-right: 0;
   }
+  .slds-media {
+    margin-bottom: $spacing-medium;
+  }
 }
 
 // override min-width and force header to wrap on nested card headers
